# FraudGuard-Ai

./: README.md  app.py  dataset_link.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
app_pages/: __init__.py  home.py  performance.py  prediction.py
assets/: styles.css
models/: best_model.pkl
notebooks/eda/: data_analysis.ipynb
notebooks/model/: main.ipynb
src/: __init__.py  charts.py  config.py  data.py  evaluation.py  explain.py  model.py  report.py  rules.py
tests/: conftest.py  test_pipeline.py
